--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
-
 /* Variables colors */
 :root {
-    --color-primary: gray;
-    --color-secondary: #e74c3c;
+    --color-primary: rgb(48, 48, 48);
+    --color-secondary: rgb(217, 228, 12);
     --font-family: 'Poppins', sans-serif;
     --font-size: 16px;
-  }
-  /* var(--color-primary); */
+}
 
-  
+/* Reset de estilos */
 *,
 *::before,
 *::after {
@@ -19,42 +16,176 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--font-family);
     text-decoration: none;
     list-style: none;
 }
 
-/* MENU ====================================== */
-.menu {
+/* ============================================
+   ============================================
+   ============================================ */
+
+/* TODO: NAVBAR */
+.logo {
+    width: 30px;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     height: 60px;
     background-color: var(--color-primary);
     width: 100%;
-    /* border: 2px solid rgb(0, 0, 0); */
+    box-shadow: 0px 4px 5px 2px rgba(227, 199, 199, 0.35);
 }
 
-.menu ul {
+.navbar ul {
     display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-.menu a {
-    color: black;
+.navbar a {
+    color: rgb(255, 255, 255);
     padding: 10px;
-    
 }
 
-.menu li {
+.navbar li {
     width: 100%;
-    /* border: 2px solid rgb(0, 0, 0); */
-    transition: background-color 0.3s; /* Agregar transición solo para el fondo */
 }
 
-.menu li:hover {
-    background-color: black;
+.navbar li:hover {
+    color: #fff;
     cursor: pointer;
 }
 
-.menu li:hover a {
-    color: white;
+.navbar li:hover a {
+    color: var(--color-secondary);
+    transition: .5s ease 0s;
 }
+
+/* FIXME: Navbar Mobile */
+@media only screen and (max-width: 700px) {
+    .navbar ul {
+        flex-direction: column;
+    }
+
+    .navbar {
+        height: 310px;
+        justify-content: center;
+        font-size: 20px;
+    }
+
+    .navbar li:hover a {
+        /* background-color: #e74c3c; */
+        /* border-left: 3px solid var(--color-secondary) ; */
+    }
+
+    .navbar li {
+        margin-top: 15px;
+    }
+
+    .logo {
+        display: none;
+    }
+}
+
+/* ============================================
+   ============================================
+   ============================================ */
+
+/* TODO: HERO */
+.hero-container {
+    width: 100%;
+    max-height: 900px;
+    overflow: hidden;
+    position: relative;
+}
+
+.img-hero {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.hero-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    max-width: 80%;
+    padding: 20px;
+}
+
+.hero-text h1 {
+    font-size: 4rem;
+    margin-bottom: 10px;
+}
+
+.hero-text p {
+    font-size: 2rem;
+}
+
+.hero-span {
+    color: rgb(82, 200, 230);
+}
+
+.hero-span2 {
+    color: rgb(244, 244, 244);
+    background-color: rgba(5, 32, 64, 0.547);
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.hero-span2:hover {
+    background-color: rgba(24, 83, 155, 0.657);
+    font-weight: bolder;
+    transition: 1s ease 0s;
+}
+
+.hero-span-a {
+    color: #fff;
+}
+
+/* FIXME: hero mobile   */
+@media only screen and (max-width: 1150px) {
+    .hero-text h1 {
+        font-size: 4rem;
+        margin-bottom: 10px;
+    }
+
+    .hero-text p {
+        font-size: 1.5rem;
+    }
+
+    .hero-text {
+        max-width: 90%;
+        padding: 10px;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .img-hero {
+        width: 100%;
+    }
+
+    .hero-text h1 {
+        font-size: 1.5rem;
+    }
+
+    .hero-text p {
+        font-size: 0.9rem;
+        display: none;
+    }
+
+    .hero-text {
+        max-width: 90%;
+        padding: 10px;
+    }
+}
+
+/* ============================================
+   ============================================
+   ============================================ */
+
