--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,13 +21,23 @@
     list-style: none;
 }
 
+body {
+    background: var(--color-primary);
+}
+
 /* ============================================
    ============================================
    ============================================ */
 
 /* TODO: NAVBAR */
 .logo {
-    width: 30px;
+    width: 20px;
+    transition: .5s ease 0s;
+}
+
+.logo:hover {
+    transform: scale(1.25);
+    cursor: pointer;
 }
 
 .navbar {
@@ -36,8 +46,6 @@
     align-items: center;
     height: 60px;
     background-color: var(--color-primary);
-    width: 100%;
-    box-shadow: 0px 4px 5px 2px rgba(227, 199, 199, 0.35);
 }
 
 .navbar ul {
@@ -46,16 +54,7 @@
 
 .navbar a {
     color: rgb(255, 255, 255);
-    padding: 10px;
-}
-
-.navbar li {
-    width: 100%;
-}
-
-.navbar li:hover {
-    color: #fff;
-    cursor: pointer;
+    padding: 30px 5px 5px 30px;
 }
 
 .navbar li:hover a {
@@ -141,7 +140,7 @@
 .hero-span2:hover {
     background-color: rgba(24, 83, 155, 0.657);
     font-weight: bolder;
-    transition: 1s ease 0s;
+    transition: s ease 0s;
 }
 
 .hero-span-a {
