--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Barcode+39+Text&display=swap');
+/* font-family: 'Libre Barcode 39 Text', cursive; */
+@import url('https://fonts.googleapis.com/css2?family=Praise&family=Roboto+Condensed:wght@300;400;700&display=swap');
+/* font-family: 'Praise', cursive; */
+
+
 /* Variables colors */
 :root {
     --color-primary: rgb(48, 48, 48);
     --color-secondary: rgb(217, 228, 12);
-    --font-family: 'Poppins', sans-serif;
+    --color-three: #0593ff;
+    --color-four: #33e4ff;;
+    --font-family: 'Roboto Condensed', sans-serif;
     --font-size: 16px;
 }
 
@@ -25,20 +33,15 @@ body {
     background: var(--color-primary);
 }
 
+input {
+    cursor: pointer;
+}
+
 /* ============================================
    ============================================
    ============================================ */
 
 /* TODO: NAVBAR */
-.logo {
-    width: 20px;
-    transition: .5s ease 0s;
-}
-
-.logo:hover {
-    transform: scale(1.25);
-    cursor: pointer;
-}
 
 .navbar {
     display: flex;
@@ -46,6 +49,18 @@ body {
     align-items: center;
     height: 60px;
     background-color: var(--color-primary);
+}
+
+.logo {
+    width: 30px;
+    transition: .5s ease 0s;
+}
+
+.logo:hover {
+    transform: scale(1.25);
+    cursor: pointer;
+    /* border: 1px dashed #fff; */
+    /* border-radius: 50%; */
 }
 
 .navbar ul {
@@ -58,7 +73,7 @@ body {
 }
 
 .navbar li:hover a {
-    color: var(--color-secondary);
+    color: var(--color-four);
     transition: .5s ease 0s;
 }
 
@@ -72,11 +87,6 @@ body {
         height: 310px;
         justify-content: center;
         font-size: 20px;
-    }
-
-    .navbar li:hover a {
-        /* background-color: #e74c3c; */
-        /* border-left: 3px solid var(--color-secondary) ; */
     }
 
     .navbar li {
@@ -128,6 +138,8 @@ body {
 
 .hero-span {
     color: rgb(82, 200, 230);
+    font-family: 'Praise', cursive;
+    font-size: 60px;
 }
 
 .hero-span2 {
@@ -145,6 +157,7 @@ body {
 
 .hero-span-a {
     color: #fff;
+    font-family: 'Praise', cursive;
 }
 
 /* FIXME: hero mobile   */
@@ -187,4 +200,111 @@ body {
 /* ============================================
    ============================================
    ============================================ */
+
+/* TODO: MODAL */
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #636363bd;
+    backdrop-filter: blur(3px);
+    display: flex;
+    opacity: 0;
+    pointer-events: none; /* permite seleccionar los elementos */
+    transition: opacity .6s .9s;
+    --transform: translateY(-100vh);
+    --transition: transform .8s;
+}
+
+.modal--show {
+    opacity: 1;
+    pointer-events: unset;
+    transition: opacity .6s;
+    --transform: translateY(0);
+    --transition: transform .8s .8s;
+}
+
+.modal_container {
+    margin: auto;
+    width: 90%;
+    max-width: 600px;
+    max-height: 90%;
+    background-color: var(--color-primary);
+    border-radius: 6px;
+    padding: 3em 2.5em;
+    display: grid;
+    gap: 1em;
+    place-items: center;
+    grid-auto-columns: 100%;
+    transform: var(--transform);
+    transition:var(--transition);
+    transition: border-color 0.3s ease;
+}
+
+.modal_container:hover {
+   border: 1px solid #698fac;
+}
+
+.modal_form {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal_label_form {
+    color: #cfcfcf;
+    font-family: cursive;
+    text-align:left;
+}
+
+.modal_input_form {
+    padding: 5px 8px 5px 8px;
+    border-radius: 15px;
+    margin-top: 6px;
+}
+
+.modal_img {
+    width: 90%;
+    max-width: 300px;
+}
+
+.modal_close {
+    text-decoration: none;
+    color: #fff;
+    background-color: var(--color-three);
+    padding: 1em 3em;
+    border-radius: 6px;
+    display: inline-block;
+    font-weight: 300;
+    transition: background-color .3s;
+}
+
+.login_icon {
+    position: relative;
+    top: 5px;
+}
+
+.modal_close:hover {
+    color: var(--color-three);
+    background-color: var(--color-primary);
+    border: 1px solid;
+}
+
+/* FIXME: MODAL MOBILE */
+
+@media (max-width:800px) {
+
+      .modal_container{
+        padding: 2em 1.5em;
+    }
+
+}
+
+/* ============================================
+   ============================================
+   ============================================ */
+/* 
+
+/* LOGIN ENTER */
 
