--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,7 @@ input {
     align-items: center;
     height: 60px;
     background-color: var(--color-primary);
+    box-shadow: 0px 4px 5px 2px rgba(0,0,0,0.15);
 }
 
 .logo {
@@ -73,7 +74,7 @@ input {
 }
 
 .navbar li:hover a {
-    color: var(--color-four);
+    color: #b9d6ed;
     transition: .5s ease 0s;
 }
 
@@ -112,7 +113,7 @@ input {
 
 .img-hero {
     width: 100%;
-    height: auto;
+    height: 500px;
     object-fit: cover;
 }
 
@@ -144,13 +145,13 @@ input {
 
 .hero-span2 {
     color: rgb(244, 244, 244);
-    background-color: rgba(5, 32, 64, 0.547);
+    background-color: rgba(38, 44, 52, 0.547);
     padding: 10px;
     border-radius: 10px;
 }
 
 .hero-span2:hover {
-    background-color: rgba(24, 83, 155, 0.657);
+    background-color: rgba(30, 38, 48, 0.657);
     font-weight: bolder;
     transition: s ease 0s;
 }
@@ -209,13 +210,30 @@ input {
     right: 0;
     bottom: 0;
     background-color: #636363bd;
-    backdrop-filter: blur(3px);
+    /* backdrop-filter: blur(3px); */
     display: flex;
     opacity: 0;
     pointer-events: none; /* permite seleccionar los elementos */
-    transition: opacity .6s .9s;
     --transform: translateY(-100vh);
     --transition: transform .8s;
+}
+
+.close-modal {
+    margin-top: -30px;
+    justify-self: end;
+    color: #dbdbdb;
+    background-color: rgb(79, 79, 79);
+    padding: 5px 10px;
+    border-radius: 50%;
+}
+
+.close-modal:hover {
+    color: #ffffff;
+    background-color: rgb(79, 79, 79);
+    padding: 5px 10px;
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: .5s ease 0s;
 }
 
 .modal--show {
@@ -306,5 +324,67 @@ input {
    ============================================ */
 /* 
 
-/* LOGIN ENTER */
+/* TODO: CARDS */
 
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px; 
+    margin: 20px;
+  }
+  
+  .card {
+    background-color: rgb(68, 68, 68);
+    border-radius: 8px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    max-width: 300px;
+    color: white;
+    cursor: pointer;
+  }
+  
+  .card img {
+      /* width: 30px; */
+      /* width: 100%; */
+      margin-left: 50px;
+      width: 200px;
+      height: auto;
+  }
+
+  .card img:hover {
+    transform: scale(.7);
+    transition: transform 0.5s 0s ease; 
+}
+  
+  .card-content {
+    padding: 16px;
+    background-color: rgb(60, 60, 60);
+  }
+  
+  .card-content h2 {
+    margin: 0;
+    font-size: 24px;
+  }
+  
+  .card-content p {
+    margin: 8px 0;
+    font-size: 14px;
+    color: #e9e9e9;
+  }
+  
+  .button {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: #2d2d2d;
+    color: #e6e6e6;
+    text-decoration: none;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .button:hover {
+    background-color: #161616;
+    color: #fff;
+  }
