--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,7 +9,8 @@
     --color-primary: rgb(48, 48, 48);
     --color-secondary: rgb(217, 228, 12);
     --color-three: #0593ff;
-    --color-four: #33e4ff;;
+    --color-four: #33e4ff;
+    ;
     --font-family: 'Roboto Condensed', sans-serif;
     --font-size: 16px;
 }
@@ -31,15 +32,31 @@
 
 body {
     background: var(--color-primary);
+    margin: 0;
+    padding: 0;
+    /* border: 3px solid red; */
+    position: relative;
+    padding-bottom: 15%;
+    min-height: 100vh;
 }
 
 input {
     cursor: pointer;
 }
 
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+
 /* ============================================
    ============================================
    ============================================ */
+/* TODO: PAGE: INDEX TODO:*********************/
+
 
 /* TODO: NAVBAR */
 
@@ -49,7 +66,7 @@ input {
     align-items: center;
     height: 60px;
     background-color: var(--color-primary);
-    box-shadow: 0px 4px 5px 2px rgba(0,0,0,0.15);
+    box-shadow: 0px 4px 5px 2px rgba(0, 0, 0, 0.15);
 }
 
 .logo {
@@ -115,6 +132,7 @@ input {
     width: 100%;
     height: 500px;
     object-fit: cover;
+    margin-bottom: 10px;
 }
 
 .hero-text {
@@ -213,7 +231,8 @@ input {
     /* backdrop-filter: blur(3px); */
     display: flex;
     opacity: 0;
-    pointer-events: none; /* permite seleccionar los elementos */
+    pointer-events: none;
+    /* permite seleccionar los elementos */
     --transform: translateY(-100vh);
     --transition: transform .8s;
 }
@@ -257,12 +276,12 @@ input {
     place-items: center;
     grid-auto-columns: 100%;
     transform: var(--transform);
-    transition:var(--transition);
+    transition: var(--transition);
     transition: border-color 0.3s ease;
 }
 
 .modal_container:hover {
-   border: 1px solid #698fac;
+    border: 1px solid #698fac;
 }
 
 .modal_form {
@@ -273,7 +292,7 @@ input {
 .modal_label_form {
     color: #cfcfcf;
     font-family: cursive;
-    text-align:left;
+    text-align: left;
 }
 
 .modal_input_form {
@@ -313,7 +332,7 @@ input {
 
 @media (max-width:800px) {
 
-      .modal_container{
+    .modal_container {
         padding: 2em 1.5em;
     }
 
@@ -331,11 +350,11 @@ input {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 20px; 
+    gap: 20px;
     margin: 20px;
-  }
-  
-  .card {
+}
+
+.card {
     background-color: rgb(68, 68, 68);
     border-radius: 8px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
@@ -343,38 +362,38 @@ input {
     max-width: 300px;
     color: white;
     cursor: pointer;
-  }
-  
-  .card img {
-      /* width: 30px; */
-      /* width: 100%; */
-      margin-left: 50px;
-      width: 200px;
-      height: auto;
-  }
-
-  .card img:hover {
-    transform: scale(.7);
-    transition: transform 0.5s 0s ease; 
 }
-  
-  .card-content {
+
+.card img {
+    /* width: 30px; */
+    /* width: 100%; */
+    margin-left: 50px;
+    width: 200px;
+    height: auto;
+}
+
+.card img:hover {
+    transform: scale(.7);
+    transition: transform 0.5s 0s ease;
+}
+
+.card-content {
     padding: 16px;
     background-color: rgb(60, 60, 60);
-  }
-  
-  .card-content h2 {
+}
+
+.card-content h2 {
     margin: 0;
     font-size: 24px;
-  }
-  
-  .card-content p {
+}
+
+.card-content p {
     margin: 8px 0;
     font-size: 14px;
     color: #e9e9e9;
-  }
-  
-  .button {
+}
+
+.button {
     display: inline-block;
     padding: 8px 16px;
     background-color: #2d2d2d;
@@ -382,9 +401,302 @@ input {
     text-decoration: none;
     border-radius: 4px;
     transition: background-color 0.3s ease;
-  }
-  
-  .button:hover {
+}
+
+.button:hover {
     background-color: #161616;
     color: #fff;
-  }
+}
+
+/* ============================================
+   ============================================
+   ============================================ */
+/* 
+
+  /* TODO: FOOTER */
+.pie-pagina {
+    width: 100%;
+    background-color: #212121;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.pie-pagina .grupo-1 {
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+    padding: 45px 0px;
+}
+
+.pie-pagina .grupo-1 .box figure {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pie-pagina .grupo-1 .box figure img {
+    width: 100px;
+}
+
+.pie-pagina .grupo-1 .box h2 {
+    color: #fff;
+    margin-bottom: 25px;
+    font-size: 20px;
+}
+
+.pie-pagina .grupo-1 .box p {
+    color: #ebebeb;
+    margin-bottom: 10px;
+}
+
+.pie-pagina .grupo-1 .red-social a {
+    display: inline-block;
+    text-decoration: none;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    color: white;
+    margin-right: 10px;
+    background-color: #161616;
+    text-align: center;
+    border-radius: 10%;
+    transition: all 300ms ease;
+}
+
+.pie-pagina .grupo-1 .red-social a:hover {
+    color: #a3d4dc;
+}
+
+.pie-pagina .grupo-2 {
+    background-color: #161616;
+    padding: 15px 10px;
+    text-align: center;
+    color: white;
+}
+
+.pie-pagina .grupo-2 small {
+    font-size: 15px;
+}
+
+/* FIXME: FOOTER MOBILE */
+
+@media screen and (max-width: 800px) {
+    .pie-pagina .grupo-1 {
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 30px;
+        padding: 35px 0px;
+    }
+}
+
+/* ============================================
+   ============================================
+   ============================================ */
+/* 
+
+/* TODO: BLOG */
+#blog {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 40px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+.blog-heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.blog-heading span {
+    color: #76797e;
+}
+
+.blog-heading h3 {
+    font-size: 2.4rem;
+    color: #ffffff;
+    font-weight: 600;
+    border: 1px solid rgb(80, 80, 80);
+    padding: 5px 30px;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+.blog-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0px;
+    flex-wrap: wrap;
+}
+
+.blog-box {
+    width: 350px;
+    background-color: #313131;
+    /* border: 1px solid #666666; */
+    box-shadow: 0px 4px 5px 2px rgba(0, 0, 0, 0.15);
+    margin: 20px;
+}
+
+.blog-img {
+    width: 100%;
+    height: auto;
+}
+
+.blog-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.blog-text {
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.blog-text span {
+    color: #859da6;
+    font-size: 0.9rem;
+}
+
+.blog-text .blog-title {
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: 272727;
+    color: rgb(230, 230, 230);
+}
+
+.blog-text .blog-title:hover {
+    color: #acdae7;
+    transition: all ease 0.3s;
+}
+
+.blog-text p {
+    color: #9b9b9b;
+    font-size: 0.9rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 20px 0px;
+}
+
+.blog-text a {
+    color: #adadad;
+}
+
+.blog-text a:hover {
+    color: #87d0e6;
+    transition: all ease 0.3s
+}
+
+/* FIXME: BLOG MOBILE */
+
+@media(max-width: 1250px) {
+    .blog-box {
+        width: 300px;
+    }
+}
+
+@media(max-width:1100px) {
+    .blog-box {
+        width: 70%;
+    }
+}
+
+@media(max-width: 550px) {
+    .blog-box {
+        margin: 20px 10px;
+        width: 100%;
+    }
+
+    #blog {
+        padding: 20px;
+    }
+
+}
+
+/* ============================================
+   ============================================
+   ============================================ */
+/* 
+
+/* TODO: PAGE: PROYECTOS TODO: *****************/
+
+.section-projects-container {
+    padding: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 40px auto;
+}
+
+.section-projects-container ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
+
+.section-projects-container ul li {
+    list-style: none;
+    background: #eee;
+    padding: 12px 20px;
+    margin: 5px;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+
+.section-projects-container ul li.active {
+    background: #03a9f4;
+    color: #fff;
+}
+
+.product {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.product .itemBox {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    margin: 5px;
+    display: block;
+}
+
+.product .itemBox:hover {
+    transform: scale(1.1);
+    transition: transform 0.5s 0s ease;
+    cursor: pointer;
+}
+
+.product .itemBox.hide {
+    display: none;
+}
+
+.product .itemBox img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
